$Id$

History for IMDBPHP
===================

v1.2.5 (26.04.2010)
-------------------
! imdb::releaseInfo() was also partly affected by the last IMDB site changes
! another IMDB site change broke imdb::alsoknow()
! imdb::quotes() had some annoying "share this quote" added due to IMDB site changes
! more fixes due to IMDB site changes

v1.2.4 (24.10.2010)
-------------------
! imdb::releaseInfo() did not recognize entries without day - fixed.
! imdb_person::born() and died() have been broken by IMDB changes again - fixed.
  Same for interviews(), articles(), pictorials() and magcovers()
! imdb::color() has been broken by IMDB changes - also fixed. Same for
  imdb:sound(), mpaa() and mpaa_hist()

v1.2.3 (14.02.2010)
-------------------
! imdb::plotoutline() did not cut surrounding DIV (backport from trunk)
! imdb::alsoknow() fixed (IMDB site changes - backport from trunk)
* imdb::movieconnection() - fixed FollowedBy and added Follows (tnx 2 Qvist)
* imdb::releaseInfo() now catches a few more cases (missing links)
! IMDB Search did not work with the localized sites due to new domains used
! imdb_person::filmograf did not catch characters if they had no link. Due
  to changes on the IMDB sites, it in fact did no longer catch any character...
! imdb_person: born() and died() missed to return the year due to IMDB site changes
! imdb::seasons() returned wrong season count, and imdb::episodes() got messed up on airing dates

v1.2.2 (26.11.2009)
-------------------
! fixed an backport error (PHP5 style declaration)
! fixed runtimes() again (the IMDB guys are playing with us), and fixed mpaa_reason (both backports from trunk)
! imdb_person::filmograf() was broken due to an inserted onClick() on IMDB.COM (backport from trunk)
! fixed the imdb::trailers() method. Note that IMDB now only lists their own
  videos, so the imdb_trailers class is (currently) useless.
- removed the imdb_trailers class from checks. As IMDB seems to no longer