@@ -445,7 +445,7 @@
   function tagline () {
     if ($this->main_tagline == "") {
       if ($this->page["Title"] == "") $this->openpage ("Title");
-      if (@preg_match("/Tagline:\<\/h5\>\s*\n(.*?)(<\/div|<a class=\"tn15more)/ms",$this->page["Title"],$match)) {
+      if (@preg_match('/Tagline:\<\/h5\>\s*<div class="info-content">\s*(.*?)(<\/div|<a class="tn15more)/ms',$this->page["Title"],$match)) {
         $this->main_tagline = trim($match[1]);
       }
     }
@@ -734,11 +734,11 @@
    if (empty($this->main_prodnotes)) {
     if ($this->page["Title"] == "") $this->openpage ("Title");
     if (!preg_match('!(<h3>Production Notes.*?)<h3!ims',$this->page["Title"],$match)) return $this->main_prodnotes; // no info available
-    preg_match('!<h5>Status:</h5>\s*(.*?)\|(.*?)</div>!ims',$match[1],$tmp);
+    preg_match('!<h5>Status:</h5>\s*<div class="info-content">\s*(.*?)\|(.*?)</div>!ims',$match[1],$tmp);
     $status = trim($tmp[1]); $statnote = trim($tmp[2]);
     preg_match('!<h5>Status Updated:</h5>\s*(\d+)\s*(\D+)\s+(\d{4})!ims',$match[1],$tmp);
     $update = array("day"=>$tmp[1],"month"=>$tmp[2],"mon"=>$this->monthNo($tmp[2]),"year"=>$tmp[3]);
-    preg_match('!<h5>More Info:</h5>\s*(.*?)</div!ims',$match[1],$tmp);
+    preg_match('!<h5>More Info:</h5>\s*<div class="info-content">\s*(.*?)</div!ims',$match[1],$tmp);
     $more = trim($tmp[1]);
     preg_match('!<h5>Note:</h5>\s*<span class="note">\s*(.*?)</span!ims',$match[1],$tmp);
     $note = trim($tmp[1]);
